[project]
name = "qwen-chat"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub[cli]==0.31.2",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]
