[project]
name = "qwen-chat"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "huggingface-hub[cli]==0.31.2",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.19",
    "langchain-text-splitters>=0.3.8",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "types-requests>=2.32.0.20250602",
]
